[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/apresentacao.gd" type="Script" id=1]
[ext_resource path="res://scenes/fundo.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/fala-porco.png" type="Texture" id=3]
[ext_resource path="res://fontes/msg1.fnt" type="BitmapFont" id=4]
[ext_resource path="res://fontes/apres1.fnt" type="BitmapFont" id=5]
[ext_resource path="res://sprites/menina.png" type="Texture" id=6]
[ext_resource path="res://sprites/menina-press.png" type="Texture" id=7]
[ext_resource path="res://sprites/menino.png" type="Texture" id=8]
[ext_resource path="res://sprites/menino-press.png" type="Texture" id=9]
[ext_resource path="res://sprites/porco1.png" type="Texture" id=10]
[ext_resource path="res://sprites/porco2.png" type="Texture" id=11]
[ext_resource path="res://sprites/porco3.png" type="Texture" id=12]
[ext_resource path="res://sprites/proximo.png" type="Texture" id=13]
[ext_resource path="res://sprites/pular.png" type="Texture" id=14]
[ext_resource path="res://music/click.ogg" type="AudioStream" id=15]
[ext_resource path="res://sprites/img.png" type="Texture" id=16]

[sub_resource type="Animation" id=1]

resource_name = "porco"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("mensagem:visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pular:visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("porco:position")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24, 909 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("porco:texture")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("porco:scale")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.45, 0.45 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("msg:visible")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("pular:position")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 397, 300 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("mensagem:position")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 104.122, 300.325 ) ]
}

[node name="apresentacao" type="Node"]

script = ExtResource( 1 )

[node name="fundo" parent="." instance=ExtResource( 2 )]


[node name="Sprite" type="Sprite" parent="."]

position = Vector2( 43.4588, 488.401 )
scale = Vector2( 0.67, 0.67 )
texture = ExtResource( 3 )
centered = false

[node name="msg" type="Label" parent="."]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 96.0
margin_top = 515.0
margin_right = 641.0
margin_bottom = 894.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.238281, 0.16187, 0.10611, 1 )
text = "Seja, Bem Vindo ao Grana!!"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="menina 2" type="Label" parent="."]

visible = false
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 100.0
margin_top = 767.0
margin_right = 316.0
margin_bottom = 854.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MENINA"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="menino 2" type="Label" parent="."]

visible = false
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 419.0
margin_top = 767.0
margin_right = 634.0
margin_bottom = 854.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MENINO"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="menina" type="TouchScreenButton" parent="."]

visible = false
position = Vector2( 75, 473 )
scale = Vector2( 0.39, 0.39 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="menino" type="TouchScreenButton" parent="."]

visible = false
position = Vector2( 374, 473 )
scale = Vector2( 0.39, 0.39 )
normal = ExtResource( 8 )
pressed = ExtResource( 9 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Anim" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/porco = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "porco"

[node name="mensagem" type="TouchScreenButton" parent="."]

position = Vector2( 104.122, 300.325 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 13 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="pular" type="TouchScreenButton" parent="."]

position = Vector2( 397, 300 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 14 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="click-buttom" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 15 )
playing = false
loop = false
volume_db = 0.0
stream_autoplay = false
stream_paused = false
loop_restart_time = 0.0
buffering_ms = 500

[node name="porco" type="Sprite" parent="."]

position = Vector2( 24, 909 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 12 )
centered = false

[node name="img" type="Sprite" parent="."]

visible = false
position = Vector2( 180.018, 64.3825 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )
centered = false

[connection signal="pressed"  from="menina"  to="." method="_on_menina_pressed" binds=[  ]]

[connection signal="pressed"  from="menino"  to="." method="_on_menino_pressed" binds=[  ]]

[connection signal="pressed"  from="mensagem"  to="." method="_on_mensagem_pressed" binds=[  ]]

[connection signal="pressed"  from="pular"  to="." method="_on_pular_pressed" binds=[  ]]
